--- a/reactive-user-interfaces/src/App.css
+++ b/reactive-user-interfaces/src/App.css
@@ -1,28 +1,161 @@
-.App {
-  text-align: center;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+a{
+    text-decoration: none;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+p, li, dt, dd {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 23px;
+    line-height: 1.4375rem;
+    font-weight: 400;
+    font-style: normal;
+    font-family: georgia,"times new roman",times,serif;
 }
 
-.App-title {
-  font-size: 1.5em;
+
+/*media screen*/
+p, ul, ol, dl, dd {
+    margin: 0 0 1em 0;
 }
 
-.App-intro {
-  font-size: large;
+
+/*media screen*/
+.story-menu {
+    width: 765px;
+    position: relative;
+    z-index: 1;
+    list-style: none;
+    margin-bottom: 0px;
+    padding-left: 0px;
+    list-style: none;
+    margin: 10px;
+    padding: 0;
+}
+    .story-menu > li {
+        border-top: 1px solid #e2e2e2;
+        padding-top: 7px;
+        padding-top: 21px;
+        margin-bottom: 20px;
+    }
+
+.story {
+    flex-direction:row;
+}
+    .story:before, .story:after {
+        display: table;
+        content: '';
+        line-height: 0;
+    }
+    .story:after {
+        clear: both;
+    }
+
+.story-body {
+    flex-grow: 1;
+    box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.story-footer {
+    width: 105px;
+    margin-top: 0px;
+    margin-right: 30px;
+    flex-direction: column;
+    order: -1;
+    flex-shrink: 0;
+}
+
+.story-link:link, .story-link:visited {
+    color: #000;
+}
+
+.story-link {
+    flex-grow: 1;
+    justify-content: space-between;
+}
+
+.story-meta {
+    flex-basis: 63%;
+    padding-right: 7px;
+}
+
+
+.story, .story-body, .story-link, .story-footer {
+    display: flex;
+}
+
+.kicker {
+    font-size: 11px;
+    font-size: 0.6875rem;
+    line-height: 11px;
+    line-height: 0.6875rem;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    letter-spacing: 0.075em;
+    color: #000;
+}
+
+.headline {
+    font-size: 23px;
+    font-size: 1.4375rem;
+    line-height: 25px;
+    line-height: 1.5625rem;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "nyt-cheltenham",georgia,"times new roman",times,serif;
+    margin-bottom: 8px;
+    color: #000;
+    font-feature-settings: 'kern';
+}
+
+.summary {
+    max-width: 540px;
+    align-self: flex-start;
+    margin-bottom: 0;
+    color: #333;
+    font-size: 14px;
+    font-size: 0.875rem;
+    line-height: 20px;
+    line-height: 1.25rem;
+    font-weight: 400;
+    font-style: normal;
+    font-family: georgia,"times new roman",times,serif;
+}
+
+.byline {
+    font-size: 11px;
+    font-size: 0.6875rem;
+    line-height: 12px;
+    line-height: 0.75rem;
+    font-weight: 500;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    display: none;
+    align-self: flex-start;
+    margin: 11px 0 4px;
+    color: #999;
+    display:block;
+}
+
+    .byline span {
+        text-transform: uppercase;
+    }
+
+.dateline {
+    font-size: 11px;
+    font-size: 0.6875rem;
+    line-height: 13px;
+    line-height: 0.8125rem;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "nyt-franklin",arial,helvetica,sans-serif;
+    display: block;
+    color: #999;
+    margin-top:0;
 }
