--- a/reactive-user-interfaces/src/App.css
+++ b/reactive-user-interfaces/src/App.css
@@ -1,28 +1,26 @@
-.App {
-  text-align: center;
+#container {
+    width:690px;
+    height:290px;
+    display:flex;
+    flex-direction:column;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#buttons-flex {
+    flex: 1 0 auto;
+    display:flex;
+    margin:32px;
+    justify-content:space-between;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#text-box {
+    margin: 0 32px 32px 32px;
+    flex: 0 0 135px;
+    background: #ededed;
+    box-sizing: border-box;
+    border-radius: 10px;
+    text-align: center;
+    vertical-align: middle;
+    color: #585858;
+    font-size: 27px;
+    line-height:135px;
 }
