--- a/reactive-user-interfaces/src/App.css
+++ b/reactive-user-interfaces/src/App.css
@@ -1,28 +1,15 @@
-.App {
-  text-align: center;
+#container {
+    margin: 16px;
+    font-family:Helvetica;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#fields {
+    width:345px;
+    float:left;
+    position:relative;
+    margin:0 40px 0 0;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#poster{
+    margin: 0;
 }
