--- a/reactive-user-interfaces/src/App.css
+++ b/reactive-user-interfaces/src/App.css
@@ -1,32 +1,54 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 .App {
     font: 13px Roboto;
 }
 
-h1{
-    display:block;
+a {
+    text-decoration: none;
+    color: white;
+}
+
+h1 {
+    display: flex;
     background: #333;
-    margin:0;
-    font-size: 2em;
-    padding:0.5em;
-    color:#FFF;
-    font-weight:normal;
-    position:fixed;
-    top:0;
-    width:100%;
-}
-
-#list-container{
-    padding: 4.38em 0 0 0;
-}
-
-h2 {
-    display: block;
-    background: #BBB;
     margin: 0;
-    font-size: 1em;
-    padding: 0.2em 0.5em;
+    font-size: 1.75em;
+    line-height: 1.5em;
+    padding: 0.5em;
     color: #FFF;
-    font-weight: bold;
+    font-weight: normal;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
+    z-index:10;
+}
+
+    h1 > i, h1 > a {
+        font-size: 1em !important;
+        margin:auto;
+        margin-left: 0.75em;
+    }
+
+    h1 > span {
+        flex-basis: 100%;
+    }
+
+    h1 > a {
+        display: flex;
+    }
+
+        h1 > a:first-child > i {
+            margin: auto 1.25em auto 0;
+            color: white;
+        }
+
+    h1 > i:last-child {
+        margin-right: 0;
+    }
+
+#page-container {
+    padding: 4.38em 0 0 0;
 }
